--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   qr_code_scanner: ^0.5.2
+  permission_handler: ^8.1.2
+  contacts_service: ^0.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
