--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.qr_app">
     <uses-permission android:name="android.permission.READ_CONTACTS" />  
     <uses-permission android:name="android.permission.WRITE_CONTACTS" /> 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
    <application
         android:label="qr_app"
         android:icon="@mipmap/ic_launcher">
