--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   qr_flutter: ^4.0.0
-
+  fluttertoast: ^8.0.7
+  qr_code_scanner: ^0.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,9 +34,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  qr_code_scanner: ^0.5.2
+  intl: ^0.17.0
   permission_handler: ^8.1.2
   contacts_service: ^0.6.1
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -47,6 +49,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/cheems.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
