--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/images/cheems.png
+    - assets/images/profile.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
