--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.qr_app">
+    package="com.chem.qr_app">
     <uses-permission android:name="android.permission.READ_CONTACTS" />  
     <uses-permission android:name="android.permission.WRITE_CONTACTS" /> 
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
    <application
-        android:label="qr_app"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Contact QR"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
